--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -5,24 +5,16 @@
     background-color: #fafafa;
   }
 
+  a:link,
+  a:visited {
+    color: black;
+    decoration: none;
+  }
+
   body {
     width: 100vw;
+    height: 100vh;
     margin: 0;
-  }
-
-  /* Navbar */
-  nav {
-    width: 100vw;
-    margin: 0;
-  }
-
-  .homeIcon {
-    font-size: 30px;
-    color: lightgray;
-  }
-
-  ul {
-    list-style: none;
   }
 
   /* CSS for home page */
@@ -55,12 +47,17 @@
     width: 5vh;
     height: 5vh;
     border-radius: 50%;
-
     margin: 2vw;
   }
 
   .userFeed {
     font-weight: bold;
+  }
+
+  .settingsIconFeed {
+    font-size: 20px;
+    color: lightgray;
+    /* margin-left: 20vw; */
   }
 
   .uploadedPicture {
@@ -80,6 +77,32 @@
   .numberOfLikes {
     display: flex;
     margin: 1vw;
+  }
+
+  /* .far .fa-heart {
+    color: lightgray;
+  }
+
+  .fas .fa-heart {
+    color: red;
+  } */
+  .hart {
+    margin: 0;
+    background-color: none;
+    height: 5vh;
+    width: 10vw;
+    border: none;
+    border-radius: 5%;
+    font-size: 16px;
+  }
+
+  .redHart {
+    color: red;
+    font-size: 30px;
+  }
+  .hartIconFeed {
+    font-size: 30px;
+    color: lightgray;
   }
 
   .likeCounterFeed {
@@ -126,16 +149,21 @@
   }
 
   .inputFeed {
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
     border: lightgray solid 1px;
-    width: 97vw;
-    height: 5vh;
-    margin-top: 1vw;
+    font-size: 15px;
   }
 
   .button {
     background-color: lightgray;
-    height: 3vh;
+    height: 5vh;
+    width: 30vw;
     margin-top: 1vh;
+    border-radius: 5%;
+    font-size: 16px;
   }
 
   .uploadedTime {
@@ -182,12 +210,15 @@
   }
 
   .inputPosts {
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
     border: lightgray solid 1px;
-    width: 96vw;
-    height: 5vh;
+    font-size: 15px;
   }
 
-  .buttonPosts {
+  .buttonUploadpost {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -210,6 +241,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .passwordLogin {
@@ -217,6 +249,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .buttonLogin {
@@ -227,7 +260,93 @@
   }
 
   .inputLogin {
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
     border: lightgray solid 1px;
+    font-size: 15px;
+  }
+
+  /* CSS for edit posts */
+
+  .dropdown {
+    float: right;
+    overflow: hidden;
+  }
+
+  .dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: lightgray;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin-left: 50vw;
+    width: 25px;
+  }
+
+  .dropdown-content {
+    display: none;
+    flex-flow: column;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 0;
+  }
+
+  .dropdown-content a {
+    float: right;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .show {
+    display: flex;
+  }
+
+  .editposts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .descriptionEditposts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .inputEditposts {
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: lightgray solid 1px;
+    font-size: 15px;
+  }
+
+  .buttonEditposts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: none;
+    height: 5vh;
+    width: 27vw;
+    border: none;
+    border-radius: 5%;
+    font-size: 16px;
   }
 
   /* CSS for register */
@@ -246,6 +365,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .lastNameRegister {
@@ -253,6 +373,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .usernameRegister {
@@ -260,6 +381,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .emailRegister {
@@ -267,6 +389,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .passwordRegister {
@@ -274,6 +397,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .confirmPasswordRegister {
@@ -281,10 +405,16 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 1vh;
   }
 
   .inputRegister {
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
     border: lightgray solid 1px;
+    font-size: 15px;
   }
 
   .buttonRegister {
