Split up css to diffrent files

--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -5,16 +5,22 @@
     background-color: #fafafa;
   }
 
-  a:link,
-  a:visited {
-    color: black;
-    decoration: none;
-  }
-
   body {
     width: 100vw;
     height: 100vh;
     margin: 0;
+  }
+
+  a:link,
+  a:visited {
+    color: black;
+    decoration: none;
+    text-decoration: none;
+  }
+
+  .previous {
+    font-size: 40px;
+    margin-left: 3vw;
   }
 
   /* CSS for home page */
@@ -23,155 +29,6 @@
     width: 20vh;
     height: 20vh;
     border-radius: 50%;
-  }
-
-  /* CSS for news feed */
-  .card {
-    width: 100vw;
-  }
-
-  .container {
-  }
-
-  .post {
-    /* margin-bottom: 2vh;
-    width: 100vw; */
-  }
-
-  .account {
-    display: flex;
-    align-items: center;
-  }
-
-  .profilePictureFeed {
-    width: 5vh;
-    height: 5vh;
-    border-radius: 50%;
-    margin: 2vw;
-  }
-
-  .userFeed {
-    font-weight: bold;
-  }
-
-  .settingsIconFeed {
-    font-size: 20px;
-    color: lightgray;
-    /* margin-left: 20vw; */
-  }
-
-  .uploadedPicture {
-  }
-
-  .photoFeed {
-    width: 100vw;
-    height: 100vw;
-  }
-
-  .likeButton {
-  }
-
-  .likeFormFeed {
-  }
-
-  .numberOfLikes {
-    display: flex;
-    margin: 1vw;
-  }
-
-  /* .far .fa-heart {
-    color: lightgray;
-  }
-
-  .fas .fa-heart {
-    color: red;
-  } */
-  .hart {
-    margin: 0;
-    background-color: none;
-    height: 5vh;
-    width: 10vw;
-    border: none;
-    border-radius: 5%;
-    font-size: 16px;
-  }
-
-  .redHart {
-    color: red;
-    font-size: 30px;
-  }
-  .hartIconFeed {
-    font-size: 30px;
-    color: lightgray;
-  }
-
-  .likeCounterFeed {
-  }
-
-  .likesFeed {
-    margin-left: 1vh;
-  }
-
-  .description {
-    display: flex;
-    margin: 1vw;
-  }
-
-  .descriptionFeed {
-    margin-left: 1vh;
-  }
-
-  .comments {
-    display: flex;
-    margin: 1vw;
-  }
-
-  .commentIcon {
-    font-size: 30px;
-    color: lightgray;
-  }
-
-  .commentUserFeed {
-    font-weight: bold;
-    color: deepskyblue;
-  }
-
-  .commentFeed {
-    margin-left: 1vh;
-  }
-
-  .addComment {
-    display: flex;
-    margin: 1vw;
-  }
-
-  .formCommentFeed {
-  }
-
-  .inputFeed {
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: lightgray solid 1px;
-    font-size: 15px;
-  }
-
-  .button {
-    background-color: lightgray;
-    height: 5vh;
-    width: 30vw;
-    margin-top: 1vh;
-    border-radius: 5%;
-    font-size: 16px;
-  }
-
-  .uploadedTime {
-    margin: 1vw;
-  }
-
-  .uploadedFeed {
-    margin-left: 1vw;
   }
 
   /* CSS for uploading a photo */
@@ -223,316 +80,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-  }
-
-  /* CSS for login */
-
-  .login {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .emailLogin {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .passwordLogin {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .buttonLogin {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .inputLogin {
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: lightgray solid 1px;
-    font-size: 15px;
-  }
-
-  /* CSS for edit posts */
-
-  .dropdown {
-    float: right;
-    overflow: hidden;
-  }
-
-  .dropdown .dropbtn {
-    cursor: pointer;
-    font-size: 16px;
-    border: none;
-    outline: none;
-    color: lightgray;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    margin-left: 50vw;
-    width: 25px;
-  }
-
-  .dropdown-content {
-    display: none;
-    flex-flow: column;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-    z-index: 1;
-    right: 0;
-  }
-
-  .dropdown-content a {
-    float: right;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-  }
-
-  .show {
-    display: flex;
-  }
-
-  .editposts {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .descriptionEditposts {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .inputEditposts {
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: lightgray solid 1px;
-    font-size: 15px;
-  }
-
-  .buttonEditposts {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    background-color: none;
-    height: 5vh;
-    width: 27vw;
-    border: none;
-    border-radius: 5%;
-    font-size: 16px;
-  }
-
-  /* CSS for register */
-
-  .register {
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .firstNameRegister {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .lastNameRegister {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .usernameRegister {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .emailRegister {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .passwordRegister {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .confirmPasswordRegister {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .inputRegister {
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: lightgray solid 1px;
-    font-size: 15px;
-  }
-
-  .buttonRegister {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  /* CSS for settings */
-
-  .settings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .labelSettings {
-    margin-bottom: 1vh;
-  }
-
-  .profilePictureSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .pictureSettings {
-    width: 80vw;
-    height: 80vw;
-    border-radius: 50%;
-    margin: 1vh;
-  }
-
-  .firstNameSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .lastNameSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .usernameSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .bioSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .emailSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .confirmPasswordSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .changePasswordSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .deleteSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
-  }
-
-  .inputSettings {
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: lightgray solid 1px;
-    font-size: 15px;
-  }
-
-  .smallSettings {
-    margin: 1vh;
-  }
-  .buttonSettings {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 1vh;
   }
 }
 /* Desktop */
