--- a/assets/stylesheet/feed.css
+++ b/assets/stylesheet/feed.css
@@ -41,6 +41,14 @@
   }
 
   .likeButton {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .commentIcon {
+    font-size: 30px;
+    color: lightgray;
+    margin-right: 3vw;
   }
 
   .likeFormFeed {
@@ -64,6 +72,7 @@
     color: red;
     font-size: 30px;
   }
+
   .hartIconFeed {
     font-size: 30px;
     color: lightgray;
@@ -73,6 +82,7 @@
   }
 
   .likesFeed {
+    margin-left: 1vw;
   }
 
   .description {
@@ -81,40 +91,6 @@
 
   .descriptionFeed {
     margin-left: 1vh;
-  }
-
-  .comments {
-    display: flex;
-  }
-
-  .commentIcon {
-    font-size: 30px;
-    color: lightgray;
-  }
-
-  .commentUserFeed {
-    font-weight: bold;
-    color: deepskyblue;
-  }
-
-  .commentFeed {
-  }
-
-  .addComment {
-    display: flex;
-    margin: 1vw;
-  }
-
-  .formCommentFeed {
-  }
-
-  .inputFeed {
-    width: 200px;
-    padding: 12px 20px;
-    margin: 8px 0;
-    box-sizing: border-box;
-    border: lightgray solid 1px;
-    font-size: 15px;
   }
 
   .button {
