--- a/assets/stylesheet/editposts.css
+++ b/assets/stylesheet/editposts.css
@@ -4,6 +4,8 @@
   .dropdown {
     float: right;
     overflow: hidden;
+    right: 0;
+    /* width: 5vw; */
   }
 
   .dropdown .dropbtn {
@@ -15,7 +17,7 @@
     padding: 14px 16px;
     background-color: inherit;
     font-family: inherit;
-    margin-left: 50vw;
+    margin-left: 60vw;
     width: 25px;
   }
 
@@ -48,6 +50,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 9vh;
+    padding-bottom: 7vh;
   }
 
   .topEditpost {
