--- a/assets/stylesheet/register.css
+++ b/assets/stylesheet/register.css
@@ -7,6 +7,14 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding-top: 5vh;
+  }
+
+  .registerAll {
+    width: 80vw;
+    border: 1px solid lightgrey;
+    border-radius: 10px;
+    margin: 2vh;
   }
 
   .firstNameRegister {
@@ -71,5 +79,6 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 2vh;
   }
 }
