--- a/assets/stylesheet/editposts.css
+++ b/assets/stylesheet/editposts.css
@@ -1,5 +1,4 @@
 /* CSS for edit posts */
-
 @media screen and (max-width: 600px) {
   .dropdown {
     float: right;
@@ -54,18 +53,110 @@
     padding-bottom: 7vh;
   }
 
-  .topEditpost {
-    width: 100vw;
-    height: 10vh;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
+  .h2editPost {
+    margin: 1vh;
   }
 
-  .previousEditpost {
-    font-size: 40px;
-    margin-left: 3vw;
-    margin-right: 32vw;
+  .descriptionEditposts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 3vh;
+  }
+
+  .inputEditposts {
+    width: 200px;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box;
+    border: lightgray solid 1px;
+    font-size: 15px;
+  }
+
+  .buttonEditposts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .buttonDeleteposts {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+    background-color: none;
+    height: 5vh;
+    width: 27vw;
+    border: none;
+    border-radius: 5%;
+    font-size: 16px;
+  }
+}
+
+/* Desktop */
+/* ============================================== */
+/* ============================================== */
+@media screen and (min-width: 1000px) {
+  .dropdown {
+    float: right;
+    overflow: hidden;
+    right: 0;
+    /* width: 5vw; */
+  }
+
+  .dropdown .dropbtn {
+    cursor: pointer;
+    font-size: 16px;
+    border: none;
+    outline: none;
+    color: lightgray;
+    padding: 14px 16px;
+    background-color: inherit;
+    font-family: inherit;
+    margin-left: 430px;
+    width: 25px;
+  }
+
+  .dropdown-content {
+    display: none;
+    flex-flow: column;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    right: 0;
+  }
+
+  .dropdown-content a {
+    float: right;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+  }
+
+  .show {
+    display: flex;
+  }
+
+  .editposts {
+    width: 50%;
+    margin-left: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-top: 9vh;
+    padding-bottom: 7vh;
+  }
+
+  .h2editPost {
+    margin: 1vh;
   }
 
   .descriptionEditposts {
